--- a/index.html
+++ b/index.html
@@ -69,7 +69,28 @@
                 </div>
             </div>
         </div>
-        <div class="third"></div>
+        <div class="third">
+            <div class="one">
+                <i class="bi bi-people"></i><br>
+                <h1 class="count">18</h1>
+                <p class="det">CLIENTS</p>
+            </div>
+            <div class="two">
+                <i class="bi bi-briefcase all-icon"></i>
+                <h1 class="count">45</h1>
+                <p class="det">PROJECT</p>
+            </div>
+            <div class="three">
+                <i class="bi bi-heart all-icon"></i>
+                <h1 class="count">48</h1>
+                <p class="det">POSITIVE FEEDBACKS </p>
+            </div>
+            <div class="four">
+                <i class="bi bi-rocket-takeoff all-icon"></i>
+                <h1 class="count">39</h1>
+                <p class="det">WEBSITE LAUNCH</p>
+            </div>
+        </div>
         <div class="fourth"></div>
         <div class="fifth"></div>
         <div class="sixth"></div>
