--- a/index.html
+++ b/index.html
@@ -91,7 +91,53 @@
                 <p class="det">WEBSITE LAUNCH</p>
             </div>
         </div>
-        <div class="fourth"></div>
+        <div class="fourth">
+            <div class="top">
+                <h2 class="top-title">All the need that you want</h2>
+                <p class="top-parag">
+                    Praesent commodo cursus magna, vel scelerisque nisl consectetur et.<br>
+                    pharetra augue. Donec id elit non mi.
+                </p>
+            </div>
+            <div class="bottom">
+                <div class="first-box">
+                    <i class="bi bi-gear icons"></i>
+                    <h4 class="bottom-title">Easy to Customize</h4>
+                    <p class="bottom-pargraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+                    </p>
+                </div>
+                <div class="second-box">
+                    <i class="bi bi-fullscreen-exit icons"></i>
+                    <h4 class="bottom-title">Pixel Perfect</h4>
+                    <p class="bottom-pargraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+                    </p>
+                </div>
+                <div class="third-box">
+                    <i class="bi bi-chat icons"></i>
+                    <h4 class="bottom-title">Full Support</h4>
+                    <p class="bottom-pargraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+                    </p>
+                </div>
+                <div class="fourth-box">
+                    <i class="bi bi-magic icons"></i>
+                    <h4 class="bottom-title">Clean Design</h4>
+                    <p class="bottom-pargraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+                    </p>
+                </div>
+                <div class="fifth-box">
+                    <i class="bi bi-alarm icons"></i>
+                    <h4 class="bottom-title">Ontime Project</h4>
+                    <p class="bottom-pargraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+                    </p>
+                </div>
+                <div class="sixth-box">
+                    <i class="bi bi-hand-thumbs-up icons"></i>
+                    <h4 class="bottom-title">Built with SASS</h4>
+                    <p class="bottom-pargraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+                    </p>
+                </div>
+            </div>
+        </div>
         <div class="fifth"></div>
         <div class="sixth"></div>
         <div class="seventh"></div>
