Create component five

--- a/index.html
+++ b/index.html
@@ -138,7 +138,75 @@
                 </div>
             </div>
         </div>
-        <div class="fifth"></div>
+        <div class="fifth">
+            <div class="top-five">
+                <h1 class="title-top-five">
+                    Brand new social media,<br>
+                    different than any other one
+                </h1>
+                <p class="parag-top-five">
+                    Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nulla vitae elit libero, a <br>
+                    pharetra augue. Donec id elit non mi porta gravida at eget metus.
+                </p>
+            </div>
+            <div class="middle-five">
+                <div class="first-middle-five">
+                    <div class="left-middle-five">
+
+                        <i class="bi bi-camera icon-five"></i>
+                        <h2 class="title-left-middle-five">Capture every moments<br> and share it to all your <br>
+                            friends
+                        </h2>
+                        <p class="parag-left-middle-five">Nulla vitae elit libero, a pharetra augue.<br> Maecenas sed
+                            diam eget risus varius blandit<br> sit
+                            amet non magna. Cras mattis consectetur<br> purus sit amet.
+                        </p>
+                    </div>
+                    <div class="right-middle-five">
+                        <img src="./assets/app-profile-mockup.png" class="img-first-middle">
+                    </div>
+                </div>
+
+                <div class="second-middle-five">
+
+                    <div class="right-middle-five">
+                        <img src="./assets/app-chat-mockup.png" class="img-first-middle">
+                    </div>
+
+                    <div class="left-middle-five">
+
+                        <i class="bi bi-chat icon-five"></i>
+                        <h2 class="title-left-middle-five">Send private messages<br>to your friend or make a<br> chat
+                            group
+                        </h2>
+                        <p class="parag-left-middle-five">Nulla vitae elit libero, a pharetra augue.<br> Maecenas
+                            sed diam eget risus varius blandit<br> sit
+                            amet non magna. Cras mattis consectetur<br> purus sit amet.
+                        </p>
+                    </div>
+
+
+
+                </div>
+            </div>
+
+            <div class="bottom-five">
+                <div class="first-bottom-five">
+                    <h1 class="title-first-bottom">Ready to join our App for <br>your advance social<br> experience?
+                    </h1>
+                    <p class="parag-first-bottom">Nulla vitae elit libero, a pharetra augue.<br> Maecenas sed diam eget
+                        risus varius blandit<br> sit amet non magna. Cras mattis consectetur<br> purus sit amet.</p>
+                </div>
+                <div class="second-bottom-five">
+                    <a href="#">
+                        <img src="./assets/appstore-btn.png" alt="" srcset="">
+                    </a>
+                    <a href="#">
+                        <img src="./assets/playstore-btn.png" alt="" srcset="">
+                    </a>
+                </div>
+            </div>
+        </div>
         <div class="sixth"></div>
         <div class="seventh"></div>
         <div class="eighth"></div>
