Create component sixth

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 </div>
             </div>
         </div>
+
         <div class="third">
             <div class="one">
                 <i class="bi bi-people"></i><br>
@@ -91,6 +92,7 @@
                 <p class="det">WEBSITE LAUNCH</p>
             </div>
         </div>
+
         <div class="fourth">
             <div class="top">
                 <h2 class="top-title">All the need that you want</h2>
@@ -138,6 +140,7 @@
                 </div>
             </div>
         </div>
+
         <div class="fifth">
             <div class="top-five">
                 <h1 class="title-top-five">
@@ -207,7 +210,63 @@
                 </div>
             </div>
         </div>
-        <div class="sixth"></div>
+
+        <div class="sixth">
+            <div class="top-six">
+                <h2 class="title-top-six">Latest <b style="font-weight: 400;">news</b></h2>
+                <p class="parag-top-six">Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+            </div>
+            <div class="bottom-six">
+                <div class="first-bottom-six">
+                    <div class="card">
+                        <img src="./assets/blog-1.jpg" class="img-card">
+                        <div class="bottom-card">
+                            <a href="#" class="link-six">CODE</a>
+                            <a href="#" class="title-card">Amazing Blog Title</a>
+                            <p class="date">23 May 2023 / 23 Comments</p>
+                            <p class="parag-card">
+                                Lorem ipsum dolor sit amet con sectetur adipiscing elit sed do eiu smod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <p class="name-card">by Amirmohammad</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="second-bottom-six">
+                    <div class="card">
+                        <img src="./assets/blog-2.jpg" class="img-card">
+                        <div class="bottom-card">
+                            <a href="#" class="link-six">SPORT</a>
+                            <a href="#" class="title-card">Amazing Blog Title</a>
+                            <p class="date">23 May 2023 / 23 Comments</p>
+                            <p class="parag-card">
+                                Lorem ipsum dolor sit amet con sectetur adipiscing elit sed do eiu smod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <p class="name-card">by Amirmohammad</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="third-bottom-six">
+                    <div class="card">
+                        <img src="./assets/blog-3.jpg" class="img-card">
+                        <div class="bottom-card">
+                            <a href="#" class="link-six">ECONOMY</a>
+                            <a href="#" class="title-card">Amazing Blog Title</a>
+                            <p class="date">23 May 2023 / 23 Comments</p>
+                            <p class="parag-card">
+                                Lorem ipsum dolor sit amet con sectetur adipiscing elit sed do eiu smod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <p class="name-card">by Amirmohammad</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="seventh"></div>
         <div class="eighth"></div>
         <div class="ninth"></div>
