--- a/index.html
+++ b/index.html
@@ -267,11 +267,85 @@
             </div>
         </div>
 
-        <div class="seventh"></div>
+        <div class="seventh">
+            <div class="top-seven">
+                <h1 class="title-seven">Our <b style="font-weight: 500;">Awesome</b> Works</h1>
+                <p class="parag-seven">Praesent commodo cursus magna, vel scelerisque nisl consectetur et.<br>
+                    pharetra augue. Donec id elit non mi.</p>
+            </div>
+
+
+            <div class="bottom-seven">
+                <div class="box-photo">
+                    <div class="div-photo">
+                        <div class="box-hover e1">
+                            <div class="box-icon">
+                                <i class="bi bi-arrows-move "></i>
+                                <i class="bi bi-link-45deg"></i>
+                            </div>
+                            <h3 class="title-img">Camera</h3>
+                        </div>
+                        <img src="./assets/photo-1.jpg" class="photo i1">
+
+                    </div>
+                    <div class="div-photo ">
+                        <div class="box-hover e2">
+                            <div class="box-icon">
+                                <i class="bi bi-arrows-move "></i>
+                                <i class="bi bi-link-45deg"></i>
+                            </div>
+                            <h3 class="title-img">Flower</h3>
+                        </div>
+                        <img src="./assets/photo-6.jpg" class="photo i2">
+                    </div>
+                    <div class="div-photo">
+                        <div class="box-hover e3">
+                            <div class="box-icon">
+                                <i class="bi bi-arrows-move "></i>
+                                <i class="bi bi-link-45deg"></i>
+                            </div>
+                            <h3 class="title-img">Breakfast</h3>
+                        </div>
+                        <img src="./assets/photo-2.jpg" class="photo i3">
+                    </div>
+                    <div class="div-photo">
+                        <div class="box-hover e4">
+                            <div class="box-icon">
+                                <i class="bi bi-arrows-move "></i>
+                                <i class="bi bi-link-45deg"></i>
+                            </div>
+                            <h3 class="title-img">Hidden Book</h3>
+                        </div>
+                        <img src="./assets/photo-4.jpg" class="photo i4">
+                    </div>
+                    <div class="div-photo">
+                        <div class="box-hover e5">
+                            <div class="box-icon">
+                                <i class="bi bi-arrows-move "></i>
+                                <i class="bi bi-link-45deg"></i>
+                            </div>
+                            <h3 class="title-img">Chair</h3>
+                        </div>
+                        <img src="./assets/photo-7.jpg" style="margin-top: -140px;" class="photo i5">
+                    </div>
+                    <div class="div-photo">
+                        <div class="box-hover e6">
+                            <div class="box-icon">
+                                <i class="bi bi-arrows-move"></i>
+                                <i class="bi bi-link-45deg"></i>
+                            </div>
+                            <h3 class="title-img">Red</h3>
+                        </div>
+                        <img src="./assets/photo-9.jpg" class="photo i6">
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="eighth"></div>
         <div class="ninth"></div>
         <div class="tenth"></div>
     </div>
+    <script src="./main.js"></script>
 </body>
 
 
