Create component eighth

--- a/index.html
+++ b/index.html
@@ -341,7 +341,95 @@
                 </div>
             </div>
         </div>
-        <div class="eighth"></div>
+        <div class="eighth">
+            <div class="top-eighth">
+                <h2 class="title-top-eighth">Pricing</h2>
+                <p class="parag-top-eighth">Praesent commodo cursus magna, vel scelerisque nisl consectetur et.<br>
+                    pharetra augue. Donec id elit non mi.</p>
+            </div>
+            <div class="bottom-eighth">
+                <div class="box-card">
+                    <div class="pricing-card">
+                        <div class="top-card">
+                            <h4 class="title-top-card">Basic</h4>
+                            <div class="box-size">
+                                <h4 class="size">50</h4>
+                                <h6 class="gb">GB</h6>
+                            </div>
+                            <p class="parag-top-card">Perfect for the beginning</p>
+                        </div>
+
+                        <div class="bottom-card">
+                            <p class="parag-bottom-card">Unlimited Traffic<br>
+                                Full Platform Applications<br>
+                                Email support
+                            </p>
+                            <h2 class="price">$0,99</h2>
+                            <p class="per-month">/month</p>
+
+                            <a href="#">
+                                <button class="button-buy">Buy Now</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="box-card">
+                    <div class="pricing-card">
+                        <div class="top-card">
+                            <h4 class="title-top-card" style="color: #35B8AD;">Pro</h4>
+                            <div class="box-size">
+                                <h4 class="size">250</h4>
+                                <h6 class="gb">GB</h6>
+                            </div>
+                            <p class="parag-top-card">For Professionals</p>
+                        </div>
+
+                        <div class="bottom-card">
+                            <p class="parag-bottom-card">1 Domain Free<br>
+                                Unlimited Traffic<br>
+                                Full Platform Applications
+                                Premium support
+                            </p>
+                            <h2 class="price" style="margin-top: 24px;">$4,99</h2>
+                            <p class="per-month">/month</p>
+
+                            <a href="#">
+                                <button class="button-buy" style="background-color: #35B8AD;">Buy Now</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="box-card">
+                    <div class="pricing-card">
+                        <div class="top-card">
+                            <h4 class="title-top-card" style="color: #FC665F">PERFORMANCE</h4>
+                            <div class="box-size">
+                                <h4 class="size">500</h4>
+                                <h6 class="gb">GB</h6>
+                            </div>
+                            <p class="parag-top-card">For Business</p>
+                        </div>
+
+                        <div class="bottom-card">
+                            <p class="parag-bottom-card">
+                                1 Domain Free<br>
+                                Unlimited Traffic<br>
+                                Full Platform Applications<br>
+                                SSL Certificate<br>
+                                Premium support
+                            </p>
+                            <h2 class="price" style="margin-top: -2px;">$9,99</h2>
+                            <p class="per-month">/month</p>
+
+                            <a href="#">
+                                <button class="button-buy" style="background-color: #FC665F;">Buy Now</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
         <div class="ninth"></div>
         <div class="tenth"></div>
     </div>
