Create component nine

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 <div class="box-card">
                     <div class="pricing-card">
                         <div class="top-card">
-                            <h4 class="title-top-card">Basic</h4>
+                            <h4 class="title-top-card">BASIC</h4>
                             <div class="box-size">
                                 <h4 class="size">50</h4>
                                 <h6 class="gb">GB</h6>
@@ -376,7 +376,7 @@
                 <div class="box-card">
                     <div class="pricing-card">
                         <div class="top-card">
-                            <h4 class="title-top-card" style="color: #35B8AD;">Pro</h4>
+                            <h4 class="title-top-card" style="color: #35B8AD;">PRO</h4>
                             <div class="box-size">
                                 <h4 class="size">250</h4>
                                 <h6 class="gb">GB</h6>
@@ -430,7 +430,45 @@
 
             </div>
         </div>
-        <div class="ninth"></div>
+
+        <div class="ninth">
+            <div class="top-nine">
+                    <h1 class="title-nine">Who love to <b style="font-weight: 500;">work</b> with us</h1>
+            </div>
+
+            <div class="bottom-nine">
+                <div class="first-logo">
+                    <a href="#">
+                        <img src="./assets/client-1.png" class="logo">
+                    </a>
+                </div>
+                <div class="second-logo">
+                    <a href="#">
+                        <img src="./assets/client-2.png" class="logo">
+                    </a>
+                </div>
+                <div class="third-logo">
+                    <a href="#">
+                        <img src="./assets/client-3.png" class="logo">
+                    </a>
+                </div>
+                <div class="fourth-logo">
+                    <a href="#">
+                        <img src="./assets/client-4.png" class="logo">
+                    </a>
+                </div>
+                <div class="fifth-logo">
+                    <a href="#">
+                        <img src="./assets/client-5.png" class="logo">
+                    </a>
+                </div>
+                <div class="sixth-logo">
+                    <a href="#">
+                        <img src="./assets/client-6.png" class="logo">
+                    </a>
+                </div>
+            </div>
+        </div>
         <div class="tenth"></div>
     </div>
     <script src="./main.js"></script>
