--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
         <div class="ninth">
             <div class="top-nine">
-                    <h1 class="title-nine">Who love to <b style="font-weight: 500;">work</b> with us</h1>
+                <h1 class="title-nine">Who love to <b style="font-weight: 500;">work</b> with us</h1>
             </div>
 
             <div class="bottom-nine">
@@ -469,10 +469,42 @@
                 </div>
             </div>
         </div>
-        <div class="tenth"></div>
-    </div>
-    <script src="./main.js"></script>
-</body>
+        <div class="tenth">
+            <div class="right-ten">
+                <p class="parag-ten">© 2023 Moon. All Right Reserved. Create by </p>
+                <p class="parag-ten creator"> Amirmohammad</p>
+            </div>
+            <div class="left-ten">
+                <a href="#">
+                    <i class="bi bi-facebook end-icons"></i>
+                </a>
 
+                <a href="#">
+                    <i class="bi bi-twitter end-icons"></i>
+                </a>
+
+                <a href="#">
+                    <i class="bi bi-instagram end-icons"></i>
+                </a>
+
+                <a href="">
+                    <i class="bi bi-linkedin end-icons"></i>
+                </a>
+
+                <a href="#">
+                    <i class="bi bi-youtube end-icons"></i>
+                </a>
+
+                <a href="#">
+                    <i class="bi bi-pinterest end-icons"></i>
+                </a>
+            </div>
+
+        </div>
+    </div>
+
+    <script src="./main.js"></script>
+
+</body>
 
 </html>
