Add some classes

--- a/index.html
+++ b/index.html
@@ -166,17 +166,17 @@
                         </p>
                     </div>
                     <div class="right-middle-five">
-                        <img src="./assets/app-profile-mockup.png" class="img-first-middle">
+                        <img src="./assets/app-profile-mockup.png" class="img-first-middle img1">
                     </div>
                 </div>
 
                 <div class="second-middle-five">
 
                     <div class="right-middle-five">
-                        <img src="./assets/app-chat-mockup.png" class="img-first-middle">
+                        <img src="./assets/app-chat-mockup.png" class="img-first-middle img2">
                     </div>
 
-                    <div class="left-middle-five">
+                    <div class="left-middle-five five-second">
 
                         <i class="bi bi-chat icon-five"></i>
                         <h2 class="title-left-middle-five">Send private messages<br>to your friend or make a<br> chat
