HTML for responsive header

--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
                     <a href="#">Pricing</a>
                     <a href="#">Contact</a>
                 </div>
-
+                <i class="bi bi-list list"></i>
             </div>
-            <h1 class="first-title">Hello, World!</h1>
-            <p class="first-pargraph">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.<br>
-                Duis mollis, est non commodo luctus.</p>
+            <div class="C-first">
+                <h1 class="first-title">Hello, World!</h1>
+                <p class="first-pargraph">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.<br>
+                    Duis mollis, est non commodo luctus.</p>
+            </div>
         </div>
 
         <div class="second">
